Worked out the alignment and spacing issue between the icons and the text.

--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,9 @@ body {
   justify-content: space-around;
   flex-wrap: wrap;
   align-items: baseline;
-  margin-top: 8%;
 }
 
-img {
+.card-wrapper img {
   width: 75px;
 }
 
@@ -69,20 +68,18 @@ img {
   font-weight: 100;
   font-size: 12px;
   color: #fff;
-  margin-top: 6px;
-  width: 50%;
+  margin-top: 70px;
+  text-align: center;
+  display: block;
 }
 
-.text-container {
+.text-container p {
   padding: 2px 16px;
+  margin-top: 6px;
 }
 
 /* iPhone X 375px */
 @media only screen and (max-width: 375px) {
-  .card-wrapper {
-    margin: 16px;
-  }
-
   .a-tag-img-div img {
     width: 65px;
   }
@@ -94,6 +91,5 @@ img {
 /* 320 Pixels */
 @media only screen and (max-width: 320px) {
   .a-tag-img-div img {
-    /* width: 60px; */
   }
 }
